<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.x1243.amdproject.HomePage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/homepage"
        android:textSize="30sp"
        android:textColor="#ffff"
        android:gravity="center_horizontal"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_home_white_48dp"
        android:id="@+id/Homepage_btn"
        android:layout_marginTop="39dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:clickable="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_add_circle_white_48dp"
        android:layout_alignTop="@+id/message_btn"
        android:layout_toRightOf="@+id/Homepage_btn"
        android:layout_toEndOf="@+id/Homepage_btn"
        android:layout_marginLeft="59dp"
        android:layout_marginStart="59dp"
        android:id="@+id/location_btn"
        android:clickable="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_message_white_48dp"
        android:id="@+id/message_btn"
        android:layout_marginBottom="100dp"
        android:layout_marginRight="58dp"
        android:layout_marginEnd="58dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/Homepage_btn"
        android:layout_toStartOf="@+id/Homepage_btn"
        android:clickable="true" />

    <TextView
        android:text="@string/HomePage_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffff"
        android:gravity="center"
        android:textSize="18sp"
        android:id="@+id/textView2" />

    <TextView
        android:id="@+id/textViewUserEmail"
        android:textColor="#ffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Homepage_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/common_plus_signin_btn_text_dark_normal"
        android:text="@string/log_out" />


</RelativeLayout>
